--- a/masum.html
+++ b/masum.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masum Raihan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="part-1">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Masum Raihan</span> World!</h1>
+
+            <p>Hello, This is Masum.I am a web developer with an amazing ability to develop websites that are both
+                functional and aesthetically pleasing. I have a strong understanding of web standards and best
+                practices,
+                and I am passionate about creating websites that users will find easy to use and visually appealing. I
+                am
+                also proficient in a variety of programming languages and tools, and I have a proven track record of
+                delivering successful projects on time and within budget. I am a team player who is always willing to
+                lend a
+                helping hand, and I am confident in my ability to contribute.</p><br>
+            <a class="btn" target="_blank" href="https://github.com/masum454">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="masum-site-bg.png" alt="">
+        </div>
+    </section>
+
+    <section class="part-2">
+        <div class="half-width-2">
+            <img src="my-bg2.png" alt="">
+        </div>
+        <div class="half-width-2">
+            <div class="new-half-width">
+                <h1>Here is Winter!</h1>
+                <h4>Winter is very pretty season.</h4>
+                <p>
+                    Winter. It's the darkest and often the coldest of the seasons, but with chill and the possible
+                    snowfall comes the holiday season, and ample moments for cozy retreat and hibernation. Who doesn't
+                    love curling up with a winter cocktail by the fireplace, snuggling up with a blanket and indulging a
+                    bit. As there are for fall, spring, and summer, there are beautiful quotes to celebrate the snowy
+                    season.
+                </p><br>
+                <a class="btn2" target="_blank"
+                    href="https://www.daily-bangladesh.com/media/imgAll/2020June/en/Winter-morning-2010241008.jpg">Winter
+                    Morning</a>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
