Complete-Portfolio-Website

--- a/masum.html
+++ b/masum.html
@@ -55,6 +55,33 @@
             </div>
         </div>
     </section>
+    <section class="last-part">
+        <h1>Never Give Up.</h1>
+        <div class="part-1">
+            <div id="box-arranged" class="new-container">
+                <h1>Life is too short.</h1>
+                <h2>You are the Champion.</h2>
+                <p>
+                    Sing like no one's listening, love like you've never been hurt, dance like nobody's watching, and
+                    live
+                    like it's heaven on earth.
+                </p>
+            </div>
+            <div id="box-arranged-2" class="new-container">
+                <h1>What is Love ?</h1>
+                <h2>Love is like a secrifice.</h2>
+                <p>
+
+                    When you truly Release the struggle, you learn what it means to have real freedom to be exactly what
+                    you
+                    are meant to be – and to let it be easier than you ever imagined.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>© Masum Raihan 2022, a Junior Web Developer.</p>
+</footer>
 
 </html>
