--- a/masum.html
+++ b/masum.html
@@ -74,7 +74,7 @@
 
                     When you truly Release the struggle, you learn what it means to have real freedom to be exactly what
                     you
-                    are meant to be – and to let it be easier than you ever imagined.
+                    are meant to be and to let it be easier than you ever imagined.
                 </p>
             </div>
         </div>
